# university-labs

./: .gitignore  README.md
sem1/OAiP/Examination/: 3.cpp  5.cpp  7.cpp
sem1/OAiP/L5/: L5.cpp
sem1/OAiP/L6/: L6.cpp
sem1/OAiP/L7/: CMakeLists.txt  main.cpp
sem1/OAiP/L8/: CMakeLists.txt  L8.cpp
sem1/OKG/: README.md  Визиоарт.vsdx  Деталь1-1-1.dwg  Деталь1-1.ipt  Деталь1.ipt  Деталь2.ipt  Деталь3.dwg  Деталь3.ipt  Комбинирование.ipt  ПересечениеПоверхностей(цвет).dwg  ПересечениеПоверхностей3Вида.dwg  Пример1- готовый чертеж пересечение поверхностей.dwg  Пример1.ipt  Сечение плоскостью.dwg  визитка .docx  шаблон(1).odg  шаблон(1).vsdx
sem1/OKG/OldVersions/: Деталь1-1.0001.ipt  Деталь1-1.0002.ipt  Деталь1.0003.ipt  Деталь3.0001.ipt  ПересечениеПоверхностей3Вида.0001.dwg  Сечение плоскостью.0001.dwg
sem1/PIOIVIS/Estimated-work/: CMakeLists.txt  file.txt  visualize.gv
sem1/PIOIVIS/L5/: File1.txt  Test.bat  W1.sh  W2.sh  W3.sh  W43.bat  W43.sh  echo.bat
sem1/TMOIS/L1/: Лабораторная 1 ТМОИС FINAL.docx  Лабораторная 1 ТМОИС.docx  Лабораторная 1 ТМОИС.odt
sem1/TMOIS/L2/: .gitignore  CMakeLists.txt  L2.cpp  отчет по Тмоис copy.docx  отчет по Тмоис.odt  (+1 more)
sem2/OAiP/: Задание_к_курсовому_проекту_заполненное.docx  Задание_к_курсовому_проекту_заполненное.odt
sem3/OTIS/: OTIS_Report_1.odt
sem3/PPOIS/L1/: .gitignore  CMakeLists.txt
sem3/PPOIS/L1/Polynomial/: CMakeLists.txt  Polynomial.cpp  Polynomial.h
sem3/PPOIS/L1/SegmentVector/: CMakeLists.txt  SegmentVector.cpp  SegmentVector.h
sem3/PPOIS/L1/Tests/: CMakeLists.txt  PolynomialTest.cpp  SegmentVectorTest.cpp
(+68 files in other folders)
